--- a/Lecho-certificate.html
+++ b/Lecho-certificate.html
@@ -147,7 +147,7 @@
         <div class="row">
           <header class="d-flex justify-content-center align-items-center">
             <h1 style="color: green" class="text-center font-weight-bold">
-              CERTIFICATS
+             Lecho CERTIFICATS
             </h1>
           </header>
         </div>
@@ -245,6 +245,6 @@
       </div>
     </div>
 
-    <script src="./js/certificate.js"></script>
+    <script src="./js/lechoCertificate.js"></script>
   </body>
 </html>
