--- a/maladieData.html
+++ b/maladieData.html
@@ -26,7 +26,7 @@
                 <div class="form-group ">
                   <label for="inputPassword1" class="font-weight-bold">Age de patient:</label>
                   <div>
-                      <input  required type="number" class="form-control" id="inputAge" minlength="0" maxlength="120">
+                      <input  required type="text" class="form-control" id="inputAge" >
                   </div>
                 </div>
            
