--- a/recipeAnalyse.html
+++ b/recipeAnalyse.html
@@ -183,7 +183,7 @@
         </div>
 
         <h2 class="prescription-title">
-          <u></u>
+          <u>Analyse Biologique</u>
         </h2>
         <div class="medic-list">
           <ul class="uld"></ul>
