--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                    
                 </ul>
                 <ul class="list-group col-3 side ">
-                      <li class="list-group-item "> LECHO</li>
+                      <li class="list-group-item ">
+                        <a href="./Lecho-certificate.html">LECHO </a> </li>
                 </ul>
                 </div>
             
